--- a/css/layout.css
+++ b/css/layout.css
@@ -3,5 +3,13 @@ img {
   max-width: 200px;
   max-height: 200px;
   object-fit: scale-down;
-  display: block;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border: 1px dotted;
+}
+
+.container {
+  height: 700px;
+
 }
